Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
@@ -11,7 +11,7 @@
 
 <h1 class="Head">
 Changing the encoding used to show the source</h1>
-To changes the encoding tha the Java editor uses to display Java source:
+To change the encoding used by the Java editor to display source files: 
 <ul>
 <li>
 With the Java editor open, select <b>Edit > Encoding</b> from the menu
