--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
@@ -11,8 +11,7 @@
 
 <h1 class="Head">
 Using Structured Selection</h1>
-&nbsp;
-<p>&nbsp;
+<p>
 <p>Structured Selection lets you quickly select Java code in a syntax-aware
 way.
 <p>To use Structured Selection:
@@ -31,16 +30,14 @@ When a statement or a list of statements is selected, you can press <b>Ctrl+Shif
 Right</b> or select <b>Edit > Expands Selection To > Next Element</b>,
 which will expand the selection with the statement (if any exists) that
 is immediately <i>after</i> the selected statements.
-<p>When a statement or a list of statements is selected, you can press
-<b>Ctrl+Shift+Arrow Left</b> or select <b>Edit > Expands Selection To >
-Previous Element</b>, which will expand the selection with the statement
-(if any exists) that is immediately <i>before</i> the selected statements.
-<br>&nbsp;
-<br>&nbsp;
-<p>Pressing <b>Ctrl+Shift+Arrow Down</b> or selecting <b>Edit > Expands
-Selection To > Restore Last Selection </b>from the menu bar lets you restore
-the previous structured selection.
-
+<p>When a statement or a list of statements is selected, you can press <b>Ctrl+Shift+Arrow 
+  Left</b> or select <b>Edit > Expands Selection To > Previous Element</b>, which 
+  will expand the selection with the statement (if any exists) that is immediately 
+  <i>before</i> the selected statements. <br>
+<p>&nbsp;</p>
+<p>Pressing <b>Ctrl+Shift+Arrow Down</b> or selecting <b>Edit > Expands Selection 
+  To > Restore Last Selection </b>from the menu bar lets you restore the previous 
+  structured selection. 
 <p class="para"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
 <br>&nbsp;
