--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-177.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-177.htm
@@ -27,7 +27,7 @@ Press <b>Ctrl+/</b> or</li>
 Select <b>Source > Comment</b> from the menu bar</li>
 </ul>
 </ul>
-&nbsp;To uncomment lines of code in the Java editor:
+To uncomment lines of code in the Java editor:
 <ul>
 <li>
 Select the lines you wish to uncomment</li>
