[TB] sentence style captialisation

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-6.htm
@@ -8,7 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Code Assist</H1>
+<H1 CLASS="Head">Code assist</H1>
 <ul>
   <li> Typing <code>Runnable r= new Runnable(&lt;code assist&gt;</code> priovides 
     an anonymous type completion that inserts the corresponding method stubs. 
