--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
   </head>
 
   <body>
