Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -18,18 +18,16 @@ Find strings to externalize (using the <b>Find Strings To Enternalize</b>
 function), select an entry in the resulting dialog and press the <b>Externalize</b>
 button or</li>
 
-<li>
-Selec the compilation unit in which you want to externalize strings and
-selecting <b>Source > Externalize Strings</b> from the menu bar or</li>
+  <li> Select the compilation unit in which you want to externalize strings and 
+    selecting <b>Source > Externalize Strings</b> from the menu bar or</li>
 
 <li>
 In the Java editor, select <b>Source > Externalize Strings</b> from the
 pop-up menu</li>
 </ul>
-<b>&nbsp;Note</b>: Externalizing strings is undoable (with the same restrictions
-as for refactorings). Use <b>Refactor > Undo</b> from the menu bar to undo
-externalizing strings.
-
+<b>Note</b>: Externalizing strings is undoable (with the same restrictions as 
+for refactorings). Use <b>Refactor > Undo</b> from the menu bar to undo externalizing 
+strings. 
 <p class="para"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/cnls.htm">String Externalization</a>
 <br>&nbsp;
