--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
@@ -14,6 +14,7 @@ Key/value page</h1>
 
 <h1 class="Head">
 <img SRC="../images/tasks-189a.gif" ALT="Externalize Strings Key/value page" height=708 width=507></h1>
+<p>
 Externalize Strings Key/value page
 <ul>
 <li>
@@ -65,9 +66,8 @@ Strings from entries marked as <b>'Never Translate'</b> will not be externalized
 but an non-nls tag will be added to them to inform the wizard that they
 need not be translated.</li>
 
-<li>
-Strings from entries marked as <b>'Skip'</b> will not be externalized and
-not tags will be added to them.</li>
+  <li> Strings from entries marked as <b>'Skip'</b> will not be externalized and 
+    no tags will be added to them.</li>
 </ul>
 <img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
 <br><a href="tasks-206.htm">Externalizing Strings</a>
