--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -12,6 +12,7 @@
 <h1 class="Head">
 Property File page</h1>
 <img SRC="../images/tasks-190a.gif" ALT="Externalize Strings Property File page" / >
+<p>
 <br>Externalize Strings Property File page
 <ul>
 <li>
@@ -30,20 +31,19 @@ Select the <b>Create resource bundle accessor class</b> checkbox if you
 want to create a class that will be used to access the externalized strings
 (Note: the class will be reused if it exists already).</li>
 
-<li>
-In the <b>Class name</b> field, ff you have the above-mentioned checkbox
-selected, you can specify the name of the accessor class</li>
+  <li> In the <b>Class name</b> field, if you have the above-mentioned checkbox 
+    selected, you can specify the name of the accessor class</li>
 
 <li>
 Press <b>Next</b> to see a preview of the modifications or press <b>Finish</b>
 to externalize strings without previewing changes.</li>
 </ul>
-<b>Note: </b>The default behavior of the wizard (i.e. creating a class
-with a name specified in the <b>Class name field</b> and using <b>getString</b>
-as the name of the method used to retrieve strings from the property file)
-can be overriden. You may want to do so if you already have an accessor
-class in another package or you accessor class uses another a method with
-another name to get strings from the propetry file.
+<b>Note: </b>The default behavior of the wizard (i.e. creating a class with a 
+name specified in the <b>Class name field</b> and using <b>getString</b> as the 
+name of the method used to retrieve strings from the property file) can be overriden. 
+You may want to do so if you already have an accessor class in another package 
+or your accessor class uses another method with another name to get strings from 
+the propetry file. 
 <ul>
 <li>
 Unselect the <b>Use default substitution pattern</b> checkbox</li>
