--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-202.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-202.htm
@@ -32,10 +32,9 @@ If it is not visible, press the <b>Customize</b> button and select the
 <b>NLS Keys</b> checkbox, press <b>OK</b> to close the dialog and switch
 to the <b>NLS Key</b> tab.</li>
 
-<li>
-In the <b>Resource</b> bundle accessor class field, enter the name of the
-class that you use to retrieve strings from the property file. You can
-use the <b>Browse</b> button to select the class for a list.</li>
+  <li> In the <b>Resource</b> bundle accessor class field, enter the name of the 
+    class that you use to retrieve strings from the property file. You can use 
+    the <b>Browse</b> button to select the class from a list.</li>
 
 <li>
 In the <b>Property</b> file name field, enter the name of the property
