Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -33,14 +33,15 @@ To develop JUnit tests follow these steps to set-up your project:
   <li>Select <b>Java &gt; Junit</b> in the left pane and <b>TestCase</b> in the 
     right pane</li>
   <li>Press <b>Next</b> </li>
-  <br>
+  <p>
   <img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1"> 
+  <p>
   <li>In the <b>Source Folder</b> field, enter the name of the source folder in 
     which your test will be created. You can use the <b>Browse</b> button and 
-    select the source folder from the resutling dialog.</li>
+    select the source folder from the resulting dialog.</li>
   <li>In the <b>Package</b> field, enter the name (empty name denotes the default 
     package) of the package in which your test will be created. You can use the 
-    <b>Browse</b> button and select the package from the resutling dialog.</li>
+    <b>Browse</b> button and select the package from the resulting dialog.</li>
   <li>In the <b>Test case</b> field, enter the name for the test you are creating.</li>
   <li>In the <b>Test class</b>, enter (optionally) the name of the class that 
     your test will be testing. Selecting a class for testing will later allow 
@@ -58,7 +59,8 @@ To develop JUnit tests follow these steps to set-up your project:
       <li>press <b>Next</b> to select the public methods that you want to test</li>
     </ul>
   </li><br>
-  <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2"> 
+  <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2">
+  <p> 
   <li>Use the checkbox tree control to select the methods for which you want the 
     wizard to create tests</li>
   <li>Select the <b>Create tasks for generated Test methods</b> if you want to 
