--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
@@ -24,8 +24,9 @@
   <li>Select <b>Java &gt; Junit</b> from the left pane and <b>TestSuite</b> from 
     the right pane</li>
   <li>Press <b>Next</b></li>
-  <br>
+  <p>
   <img src="../images/tasks-209a.gif" alt="TestSuite creation wizard"> 
+  <p>
   <li>In the <b>Source folder</b> field, enter the name of the source folder in 
     which the test suite will be created.</li>
   <li>In the <b>Package</b> field, enter the name of the package (empty name denotes 
@@ -40,10 +41,10 @@
   <li>Either manually or</li>
   <li>By re-running the wizard and selecting the new set of test classes.</li>
 </ul>
-<p><b>Note:</b> the wizard puts, in the created Test suite class, 2 special markers 
-  (<code>//$JUnit-BEGIN$</code> and <code>//$JUnit-END$</code>), which allow it 
-  to update existing test suite classes. It is recommennded not to edit code that 
-  lies between the markers.</p>
+<p><b>Note:</b> the wizard puts 2 special markers (<code>//$JUnit-BEGIN$</code> 
+  and <code>//$JUnit-END$</code>) into the created Test suite class, which allows 
+  the wizard to update existing test suite classes. It is recommennded not to 
+  edit code that lies between the markers.</p>
 <h1><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159></h1>
 <a href="tasks-207.htm">Using JUnit</a><a href="tasks-207.htm"></a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
