--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
@@ -15,8 +15,9 @@
   <li>Select the test case and execute <b>Run &gt; Debug as &gt; JUnit Test</b> 
     from the menu bar or simply execute the test case from the launch history 
     in the <b>Debug</b> toolbar button drop down menu. </li>
-  <li>If you have the &quot;keep alive&quot; preference option set you can fix 
-    the code and rerun the test without restarting the full test run. <br>
+  <li>If you have the &quot;keep alive&quot; preference option set and your target 
+    VM supports hot code replacement you can fix the code and rerun the test without 
+    restarting the full test run. <br>
     Note: to set the preference, open the Launch configuration dialog, select 
     the lanuch configuration for your test and select the <b>Keep JUnit running 
     after a test run when debugging</b> checkbox .</li>
