*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt.htm
@@ -23,7 +23,7 @@ works.</P>
 Portability and platform integration</h2>
 <P >
 A common issue in widget toolkit design is the tension between portable toolkits and platform integration. The Java AWT
-(Abstract Widget Toolkit) provides platform integrated widgets for lower level widgets such as lists, text, and buttons, but does not provide access to higher level platform components such as trees or rich text. This forces application developers into a &quot;least common denominator&quot; situation: they can only use widgets that are available on all platforms.</P>
+(Abstract Window Toolkit) provides platform integrated widgets for lower level widgets such as lists, text, and buttons, but does not provide access to higher level platform components such as trees or rich text. This forces application developers into a &quot;least common denominator&quot; situation: they can only use widgets that are available on all platforms.</P>
 <P >
 The Swing toolkit attempts to address this problem by providing non-native implementations of high level widgets like trees, tables, and text.
 This provides a great deal of functionality, but applications developed in Swing stand out as being different. Platform look and feel emulation layers help the applications look more like the platform, but the user interaction is different enough to be noticed. This makes it difficult to use emulated toolkits to build applications that compete with shrink-wrapped applications developed specifically for a particular OS platform.</P>
