Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -18,8 +18,8 @@ view</div>
 </div>
 
 <ul>
-<div class=Section1>In the Hierarchy or Outline view, select a type or
-one of its members.</div>
+<li>In the Hierarchy or Outline view, select a type or
+one of its members.</li>
 
 <li>
 From the selected element's pop-up menu, select&nbsp;<span 
