--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
@@ -15,8 +15,9 @@ Opening an editor on a type</h1>
 
 <div class="para">You can open an editor on any type in the workbench.</div>
 
-<div class="para"><b>Note:</b> If you open a type from a CLASS or JAR file,
-you will see an empty editor unless you have attached source to it.</div>
+  <div class="para"><b>Note:</b> If you open a type from a CLASS or JAR file, 
+    you will see a special editor showing only method signatures unless you have 
+    attached source to it.</div>
 
 
 <p class="para">1.<span style='font:7.0pt "Times New Roman"'></span> Press
@@ -24,17 +25,17 @@ you will see an empty editor unless you have attached source to it.</div>
 the menu bar. The Open Type dialog opens.
 
 <p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> In
-the&nbsp;<span class=label><b>Choose a type</span></b> field, begin typing
+the&nbsp;<span class=label><b>Choose a type</b></span> field, begin typing
 an expression to narrow the list of available types, using wildcards as
 needed. As you type, the list is filtered to display only types that match
 the current expression.
 
 <p class="para">3.<span style='font:7.0pt "Times New Roman"'></span> In
-the&nbsp;<span class=label><b>Matching Types</span></b> list, select a
+the&nbsp;<span class=label><b>Matching Types</b></span> list, select a
 type. When there is more than one definition of a type, then select a package
-in the&nbsp;<span class=label><b>Qualifier</span></b> list.
+in the&nbsp;<span class=label><b>Qualifier</b></span> list.
 
-<p class="para">4.<span style='font:7.0pt "Times New Roman"'></span> Click&nbsp;<span class=label><b>OK</span></b>
+<p class="para">4.<span style='font:7.0pt "Times New Roman"'></span> Click&nbsp;<span class=label><b>OK</b></span>
 when you are done. An editor opens on the selected type.
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
