--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
@@ -8,7 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Java Project Classpath</H1>
+<H1 CLASS="Head">Java project classpath</H1>
 <ul>
   <li>To see / set up the build-time classpath for your project, select the project, 
     open the pop-up menu, choose <b>Properties</b> and go to <b>Java Build Path</b>.</li>
