--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -11,7 +11,7 @@
     of an editor area and the following views:</p>
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Package Explorer</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Type Hierarchy</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Hierarchy</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Outline</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Search</span></li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Console</span></li>
