--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -33,7 +33,7 @@
     <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
     <a href="../tasks/tasks-47.htm">Filtering elements</a><br>
     <a href="../tasks/tasks-57.htm">Generating accessors</a><br>
-    <a href="../tasks/tasks-12.htm">Organizing Java projects</a><br>
+    <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
 </div>
 
     <p>
