--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -34,7 +34,8 @@
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"><br>
-    <a href="../tasks/tasks-82.htm">Refactoring without preview</a><br>
+    <a href="../tasks/tasks-80.htm">Refactoring</a> <br>
+  <a href="../tasks/tasks-82.htm">Refactoring without preview</a><br>
     <a href="../tasks/tasks-83.htm">Refactoring with preview</a><br>
     <a href="../tasks/tasks-84.htm">Previewing refactoring changes</a><br>
     <a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><br>
