--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -34,8 +34,8 @@ pages (<b>Window</b> > <b>Preferences</b> > <b>Java > New Project</b>).
 <p><a href="tasks-13.htm">Creating a Java project as its own source container</a>
 <br><a href="tasks-14.htm">Creating a Java project with source folders</a>
 <br><a href="tasks-17.htm">Creating a new Java class</a>
-<br><a href="tasks-21.htm">Creating a new Java interface</a> <a href="tasks-26.htm">Creating
-a new source folder</a>
+<br><a href="tasks-21.htm">Creating a new Java interface</a> <br>
+<a href="tasks-26.htm">Creating a new source folder</a>
 <br><a href="tasks-11.htm">Creating Java elements</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <br><a href="../reference/ref-121.htm">New Java Project wizard</a>
