*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
@@ -12,21 +12,23 @@
 <H2>
 Beyond the basics</H2>
 
-This section gives an overview of the API provided by the compare plugin. 
+<p>
+This section provides additional information about advanced API in the compare
+plug-in.</p>
 
 <h3>Writing compare operations</h3>
 
-A compare operation must be implemented as a subclass of
-<a href="../reference/api/org/eclipse/compare/CompareEditorInput.html"><b>CompareEditorInput</b></a>.
+<p>A compare operation must be implemented as a subclass of
+<a href="../reference/api/org/eclipse/compare/CompareEditorInput.html"><b>CompareEditorInput</b></a>.&nbsp;
 A
 <a href="../reference/api/org/eclipse/compare/CompareEditorInput.html"><b>CompareEditorInput</b></a>
 runs a (potentially lengthy) compare operation
 under progress monitor control, creates a UI for drilling-down into the
 compare results, tracks the dirty state of the result in case of merge,
-and saves any changes that occured during a merge.
+and saves any changes that occurred during a merge.</p>
+
 <p>
 
-The class
 <a href="../reference/api/org/eclipse/compare/CompareUI.html"><b>CompareUI</b></a>
 defines the entry point to initiate a configurable
 compare operation on arbitrary resources. The result of the compare is
@@ -34,14 +36,12 @@ opened into a compare editor where the details can be browsed and edited
 in dynamically selected structure and content viewers.
 <p>
 
-The
 <a href="../reference/api/org/eclipse/compare/NavigationAction.html"><b>NavigationAction</b></a>
 is used to navigate (step) through the individual
 differences of a 
 <a href="../reference/api/org/eclipse/compare/CompareEditorInput.html"><b>CompareEditorInput</b></a>.
 <p>
 
-An instance of
 <a href="../reference/api/org/eclipse/compare/CompareConfiguration.html"><b>CompareConfiguration</b></a>
 configures various UI aspects
 of compare/merge viewers like title labels and images, or whether a side
@@ -51,8 +51,8 @@ on creation.
 <p>
 
 When implementing a hierarchical compare operation as a subclass of
-<a href="../reference/api/org/eclipse/compare/CompareEditorInput.html"><b>CompareEditorInput</b></a>
-clients have to provide a tree of objects where each
+<a href="../reference/api/org/eclipse/compare/CompareEditorInput.html"><b>CompareEditorInput</b></a>,
+clients must provide a tree of objects where each
 node implements the interface
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>.
 This interface is used by the hierarchical differencing engine
@@ -63,7 +63,6 @@ In addition every leaf of the tree must implement the
 interface in order to give the differencing engine access to its stream content.
 <p>
 
-The abstract class
 <a href="../reference/api/org/eclipse/compare/BufferedContent.html"><b>BufferedContent</b></a>
 provides a default implementation
 for the
@@ -78,43 +77,39 @@ adds an implementation for the
 and
 <a href="../reference/api/org/eclipse/compare/ITypedElement.html"><b>ITypedElement</b></a>
 interfaces
-based on Eclipse workbench resources
+based on platform workbench resources
 (<a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>). 
 It can be used without modification as the input to the differencing engine.
-<p>
 
 
 <h3>Compare functionality outside of compare editors</h3>
 
-If you want to use compare functionality outside of the standard Compare editor, 
-for example in a dialog or wizard the compare plugin provides additional helper
-classes:
+
+<p>If you want to use compare functionality outside of the standard compare editor, 
+for example in a dialog or wizard, the compare plug-in provides additional helper
+classes:</p>
+
 <p>
 
-The
 <a href="../reference/api/org/eclipse/compare/CompareViewerPane.html"><b>CompareViewerPane</b></a>
 is a convenience class which provides
-a label and local toolbar for a compare viewer (or any other subclass of a JFace <b>Viewer</b>).
-<br>
-Its abstract subclass
+a label and local toolbar for a compare viewer (or any other subclass of a <a href="jface_viewers.htm"> JFace
+viewer</a>).&nbsp; Its abstract subclass
 <a href="../reference/api/org/eclipse/compare/CompareViewerSwitchingPane.html"><b>CompareViewerSwitchingPane</b></a>
-supports <i>dynamic viewer switching</i>, that is the viewer installed in the pane is dynamically 
-determined by the pane's input object.
-<p>
-
-The
+supports <b>dynamic viewer switching</b>, that is the viewer installed in the pane is dynamically 
+determined by the pane's input object.<p>
 <a href="../reference/api/org/eclipse/compare/EditionSelectionDialog.html"><b>EditionSelectionDialog</b></a>
 is a simple selection dialog where
-one input element can be compared against a list of historic variants (<i>editions</i>)
+one input element can be compared against a list of historic variants (<b>editions</b>)
 of the same input element. The dialog is used to implement functions
-like <i>"Replace with Local History"</i> on workbench resources.
+like <i>&quot;</i><b>Replace with Local History"</b> on workbench resources.
 <p>
 
 In addition it is possible to specify a subsection of the input element
-(e.g. a method in a Java source file) by means of a <i>path</i>. In this
+(e.g. a method in a Java source file) by means of a <b>path</b><i>.</i>. In this
 case the dialog compares only the subsection (as specified by the path)
 with the corresponding subsection in the list of editions. This functionality
-can be used to implement <i>"Replace with Element from Local History"</i> for 
+can be used to implement <i>&quot;</i><b>Replace with Element from Local History"</b> for 
 Java Elements.
 <p>
 
