--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
@@ -13,52 +13,61 @@
 Implementing a Structure Viewer</H2>
 
 
-The class
+<p>The compare plug-in provides substantial support for implementing your own
+content viewer:</p>
+
+
+<h3>
+Differencer&nbsp;</h3>
+
+
+<p>
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a>
 is a differencing engine for hierarchically
 structured data. It takes two or three inputs and performs a two-way or
-three-way compare on them.
+three-way compare on them.</p>
+
+
 <p>
 
 If the input elements to the differencing engine implement the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
-interface the engine recursively applies itself to the children of
+interface, the engine recursively applies itself to the children of
 the input element. Leaf elements must implement the
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
-interface so that the differencer can perform a bytewise comparison on their contents.
-<p>
-
-One good example for this is
+interface so that the differencer can perform a byte wise comparison on their contents.<p>There
+are several good examples of differencers included in the platform
+implementation:
+<ul>
+  <li>
 <a href="../reference/api/org/eclipse/compare/ResourceNode.html"><b>ResourceNode</b></a>
-which implements both interfaces
-(and more) for Eclipse workspace resources
-(<a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>org.eclipse.core.resources.IResource</b></a>).
-<p>
-
-Another example is the
+ implements both interfaces
+(and more) for platform workspace resources
+(<a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>org.eclipse.core.resources.IResource</b></a>).</li>
+  <li>
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/DocumentRangeNode.html"><b>DocumentRangeNode</b></a>
-which can be used to compare hierarchical structures
-that are superimposed on a document, that is where nodes and leafs correspond to ranges in a document
-(<a href="../reference/api/org/eclipse/compare/contentmergeviewer/IDocumentRange.html"><b>IDocumentRange</b></a>).
-<br>
-Typically
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DocumentRangeNode.html"><b>DocumentRangeNode</b></a>s
+    is used to compare hierarchical structures
+that are superimposed on a document.&nbsp; Nodes and leaves correspond to ranges in a document
+(<a href="../reference/api/org/eclipse/compare/contentmergeviewer/IDocumentRange.html"><b>IDocumentRange</b></a>).&nbsp;
+    Typically, <a href="../reference/api/org/eclipse/compare/structuremergeviewer/DocumentRangeNode.html"><b>DocumentRangeNode</b></a>s
 are created while parsing a document and they represent
 the semantic entities of the document (e.g. a Java class, method or field).
-The two subclasses <b>JavaNode</b> (in org.eclipse.jdt.internal.ui.compare)
-and <b>PropertyNode</b> (in org.eclipse.jdt.internal.ui.compare) are good examples for this.
+The two subclasses <b>JavaNode</b> (in <b>org.eclipse.jdt.internal.ui.compare</b>)
+and <b>PropertyNode</b> (in <b>org.eclipse.jdt.internal.ui.compare</b>) are good examples for this.</li>
+</ul>
 <p>
 
 By default the differencing engine returns the result of the compare operation
 as a tree of
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffNode.html"><b>DiffNode</b></a>
-objects. However, this can be changed by overriding
-a single method of the engine.
-<p>
-
-Every
+objects.&nbsp; A
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffNode.html"><b>DiffNode</b></a>
-describes the changes among the two or three inputs.
+describes the changes among two or three inputs.&nbsp; The type of result nodes
+can be changed by overriding
+a single method of the engine.
+<h3>
+
+Difference Viewers</h3>
 <p>
 
 A tree of
@@ -70,16 +79,16 @@ The
 requires that inner nodes of the tree implement
 the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IDiffContainer.html"><b>IDiffContainer</b></a>
-interface and leafs the
+interface and leaves implement the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IDiffElement.html"><b>IDiffElement</b></a>
 interface.
 <p>
 
 The typical steps to compare hierarchically structured data and to display
-the differences would be to:
-<ul>
+the differences are as follows:
+<ol>
 <li>
-map the input data into a tree of object implementing both the
+map the input data into a tree of objects implementing both the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
@@ -93,7 +102,7 @@ perform the compare operation by means of the
 feed the differencing result into the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a>.</li>
 
-</ul>
+</ol>
 
 The
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/StructureDiffViewer.html"><b>StructureDiffViewer</b></a>
@@ -103,13 +112,12 @@ that automates the three steps from above. It takes a single input object
 of type
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/ICompareInput.html"><b>ICompareInput</b></a>
 from which it retrieves the two or three
-input elements to compare. Then it uses a
+input elements to compare. It uses an
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureCreator.html"><b>IStructureCreator</b></a>
-to extract a tree of
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
+to extract a tree containing <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
-from them. These trees are then compared with the differencing engine and
+ objects from them. These trees are then compared with the differencing engine and
 the result is displayed in the tree viewer.
 <p>
 
@@ -124,8 +132,7 @@ which can be easily compared
 by the differencing engine
 (<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a>).
 It is a good example for how to make structured files available to the hierarchical 
-compare functionality of the Compare plugin.
-<p>
+compare functionality of the compare plug-in.
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
