[TB] changed heading to sentence style capitalisation

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
@@ -8,8 +8,8 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Connecting to a remote VM with the Remote Java application launch configuration</H1>
+<H1 CLASS="Head"> Connecting to a remote VM with the remote Java application launch 
+  configuration</H1>
 <ol>
   <li>
 <p CLASS="Head">
