--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
@@ -9,8 +9,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Using Content Assist/Code Assist</h1>
+<h1 CLASS="Head"> Using content assist/code assist</h1>
 
 <div CLASS="Para">The scrapbook editor supports code assist.</div>
 
