--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-155.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-155.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Viewing Compilation Errors</H1>
+<H1 CLASS="Head"> Viewing compilation errors</H1>
 <P CLASS="Para">
 If an expression you select to evaluate has a compilation error, it will be reported in the scrapbook editor. </P>
 <P CLASS="Para">
