--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-16.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-16.htm
@@ -9,8 +9,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Creating a New Java Class</h1>
+<h1 CLASS="Head"> Creating a new Java class</h1>
 
 <div CLASS="Para">You can create new Java classes using any one of several
 different approaches.</div>
